WIP: Fixed button border appearing on mobile when clicked

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,6 +1,7 @@
 * {
 	font-family: "Roboto", sans-serif;
-	scrollbar-width: none;
+    scrollbar-width: none;
+    outline: none;
 }
 
 .theme-light {
